--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,30 @@
-canvas {
-    display: block;
+body, html {
+    margin: 0;
+    padding: 0;
     width: 100%;
-    height: 400px;
+    height: 100%;
     background: #000;
+}
+
+.controls {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 button {
     display: block;
-    margin: 10px;
+    margin: 10px auto;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
