--- a/styles.css
+++ b/styles.css
@@ -3,29 +3,33 @@ body, html {
     padding: 0;
     width: 100%;
     height: 100%;
-    background: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #000;
 }
 
-.controls {
+.button-container {
+    z-index: 10;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-canvas {
-    position: fixed;
-    top: 0;
-    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
 }
 
 button {
-    display: block;
-    margin: 10px auto;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+}
+
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
