--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,10 @@ body, html {
     position: absolute;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end; /* Aligning towards the bottom */
     width: 100%;
     height: 100%;
+    padding-bottom: 20px; /* Adding some padding at the bottom */
 }
 
 button {
