--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
+@font-face {
+    font-family: 'GoogleSans';
+    src: url('GoogleSans-Regular.ttf') format('truetype');
+}
+
 body {
     background-color: white;
-    margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
+    margin: 0;
 }
 
 .container {
@@ -12,32 +17,65 @@ body {
     border-radius: 24px;
     padding: 16px;
     position: relative;
-    width: 94%;  /* Reduced margin between container and window */
-    max-width: 1200px;  /* Optional: maximum width for larger screens */
 }
 
 canvas {
     display: block;
-    width: 100%;
-    height: 80vh;
+    background-color: #F0E7DE;
 }
 
 .controls {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    position: absolute;
+    bottom: 16px;
+    width: calc(100% - 32px);
+    text-align: center;
 }
 
-#playButton {
+.pill {
+    font-family: 'GoogleSans', sans-serif;
     background-color: #DE3730;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 50px;
     cursor: pointer;
+    margin-right: 10px;
 }
 
-#timeCounter {
+.monospace {
+    font-family: monospace;
     color: #DE3730;
-    font-family: 'Courier New', monospace;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    font-family: 'GoogleSans', sans-serif;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-button {
+    background-color: rgba(255, 255, 255, 0.9);
 }
