--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,43 @@
 body {
     background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     margin: 0;
-    font-family: 'Google Sans', sans-serif;
-}
-
-@font-face {
-    font-family: 'Google Sans';
-    src: url('GoogleSans-Regular.ttf') format('truetype');
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 .container {
     background-color: #F0E7DE;
-    padding: 20px;
     border-radius: 24px;
-    text-align: center;
+    padding: 16px;
     position: relative;
+    width: 94%;  /* Reduced margin between container and window */
+    max-width: 1200px;  /* Optional: maximum width for larger screens */
 }
 
 canvas {
-    background-color: #F0E7DE;
     display: block;
+    width: 100%;
+    height: 80vh;
 }
 
 .controls {
-    margin-top: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.pill {
+#playButton {
     background-color: #DE3730;
     color: white;
+    padding: 10px 20px;
     border: none;
-    padding: 8px 16px;
     border-radius: 50px;
     cursor: pointer;
-    font-family: 'Google Sans', sans-serif;
 }
 
-.monospace {
-    font-family: 'Courier New', Courier, monospace;
+#timeCounter {
     color: #DE3730;
-    margin-left: 8px;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown-button {
-    background-color: rgba(255, 255, 255, 0.9);
-    font-family: 'Google Sans', sans-serif;
+    font-family: 'Courier New', monospace;
 }
